automation/logs/content-generation.log
file:///Users/miami2/Documents/GitHub/bolt.new.zion.app/automation/independent-automation-system.js:634
      const commitMessage = \`feat: auto-generate content and features - \${new Date().toISOString()}\`;
                            ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:116:19)

Node.js v22.16.0
